--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@mui/styled-engine-sc": "^6.4.0",
+    "@mui/x-data-grid": "^6.20.4",
+    "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.29.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
