--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# vite project ignore list
+node_modules/
+dist/
+dist-ssr/
+.eslintcache
+.eslintcache.js
+.eslintcache.json
+.eslintcache.lock
+.eslintcache.lock.js
+.eslintcache.lock.json
+.eslintcache.lockfile
+.eslintcache.lockfile.js
+.eslintcache.lockfile.json
+.eslintcache.lockfile.lock
+.eslintcache.lockfile.lock.js
+.eslintcache.lockfile.lock.json
+.eslintcache.lockfile.lockfile
+.eslintcache.lockfile.lockfile.js
+
+# vite project ignore list
+    
