--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@mui/styled-engine-sc": "^6.4.0",
+    "@mui/x-data-grid": "^7.26.0",
+    "axios": "^1.7.9",
+    "axios-cookiejar-support": "^5.0.5",
+    "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^5.0.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
