--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "set SSL_CRT_FILE=./certs/localhost.pem && set SSL_KEY_FILE=./certs/localhost-key.pem && set HTTPS=true && react-scripts start"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -26,6 +27,7 @@
     "react-leaflet": "^5.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
