--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@mui/styled-engine-sc": "^6.4.0",
+    "@mui/x-data-grid": "^7.27.0",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
@@ -25,6 +26,8 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
