--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-markdown": "^9.0.3",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
