--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
