--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
+    "@mui/base": "^5.0.0-beta.70",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.0",
