--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
-    "recharts": "^2.15.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
