--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
