--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
-    "styled-components": "^6.1.14"
+    "recharts": "^2.15.2",
+    "styled-components": "^6.1.14",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
