--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^6.4.0",
     "@mui/system": "^6.4.3",
     "@mui/x-data-grid": "^7.26.0",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
