--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "^7.26.0",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
+    "html2pdf.js": "^0.10.3",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
@@ -34,6 +35,7 @@
     "react-markdown": "^9.0.3",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
+    "react-to-print": "^3.1.0",
     "recharts": "^2.15.2",
     "styled-components": "^6.1.14",
     "xlsx": "^0.18.5"
